# rust-in-react-native-demo

./: .gitignore  App.tsx  LICENSE  README.md  app.json  package.json
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/java/com/rustinreactnativedemo/: ReactNativeFlipper.java
android/app/src/main/java/com/rustinreactnativedemo/: MainActivity.java  MainApplication.java
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/rustinreactnativedemo/: ReactNativeFlipper.java
ios/: Podfile
ios/RustInReactNativeDemo/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/RustInReactNativeDemo.xcodeproj/: project.pbxproj
ios/RustInReactNativeDemo.xcodeproj/xcshareddata/xcschemes/: RustInReactNativeDemo.xcscheme
ios/RustInReactNativeDemo.xcworkspace/: contents.xcworkspacedata
ios/RustInReactNativeDemoTests/: RustInReactNativeDemoTests.m
rust/: Cargo.toml  RustCallback.cpp  build.rs  lib.rs.cc  lib.rs.h
rust/src/: lib.rs
tm/: AppTurboModules.podspec  NativeTurboModule.cpp  NativeTurboModule.h  NativeTurboModule.ts  RustCallback.cpp  RustCallback.h  RustPromiseManager.cpp  RustPromiseManager.h  build-rust-native-library.sh
