[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
cxx = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
lazy_static = "1.4"
rand = "0.8"
regex = "1.6"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-build = "1.0"
tonic-build = "0.9.1"

[lib]
crate-type = ["staticlib"]
